main/default/objects/Policy_Incremental_Setting__c/Policy_Incremental_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Policy Incremental Setting</label>
</CustomObject>