main/default/objects/Policy_Incremental_Setting__c/fields/End_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Number__c</fullName>
    <label>End Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>