main/default/objects/Policy_Incremental_Setting__c/fields/Policy_Format__c.field-meta.xml
<CustomField>
    <fullName>Policy_Format__c</fullName>
    <label>Policy Format</label>
    <length>250</length>
    <type>Text</type>
</CustomField>