main/default/objects/Policy_Incremental_Setting__c/fields/Spacing__c.field-meta.xml
<CustomField>
    <fullName>Spacing__c</fullName>
    <label>Spacing</label>
    <length>3</length>
    <type>Text</type>
</CustomField>