main/default/objects/Policy_Incremental_Setting__c/fields/Start_Number__c.field-meta.xml
<CustomField>
    <fullName>Start_Number__c</fullName>
    <label>Start Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>