main/default/objects/Policy_Incremental_Setting__c/listViews/Innovisk_All_View.listView-meta.xml
<ListView>
    <fullName>Innovisk_All_View</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Start_Number__c</columns>
    <columns>Policy_Format__c</columns>
    <columns>End_Number__c</columns>
    <columns>Spacing__c</columns>
    <columns>Suffix__c</columns>
    <columns>Active__c</columns>
    <columns>Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Innovisk All View</label>
</ListView>